tests/should_succeed/crlf.jou
# This file has CRLF line endings. Make sure your editor doesn't ruin them.
declare putchar(ch: int) -> int

def main() -> int:
    # Output: hi
    putchar('h')
    putchar('i')
    putchar('\r')
    putchar('\n')
    return 0
