tests/syntax_error/tab.jou
# This file contains a tab character. Make sure your editor doesn't ruin it.
def main() -> int:
	return 0  # Error: Jou files cannot contain tab characters (use 4 spaces for indentation)
